# bert-by-hand

./: .clangd  .gitignore  CMakeLists.txt  README.md  pyproject.toml
bench/: bench.cu  corpus.cu
scripts/: benchmark.py  benchmark_corpus.py  benchmark_varlen.py  dump_corpus.py  dump_weights.py
src/: main.cu
src/core/: cuda_check.h  device_buffer.h  file_io.h  loader.h  model_config.h  parity.h  tensor.h  timer.h
src/kernels/: attention.cu  attention.h  bias.cu  bias.h  embedding.cu  embedding.h  gelu.cu  gelu.h  layernorm.cu  layernorm.h  matmul.cu  matmul.h  normalize.cu  normalize.h  pooling.cu  pooling.h  residual.cu  residual.h  softmax.cu  softmax.h
src/model/: encoder.cu  encoder.h  forward.cu  forward.h  weights.h  workspace.h
tests/: test_attention.cu  test_batch.cu  test_config.cu  test_embed.cu  test_embedding.cu  test_gelu.cu  test_layer.cu  test_layernorm.cu  test_matmul.cu  test_parity.cu  test_softmax.cu
